# pants-playground

./: .gitignore  README.md  pants.toml
app/my-complex-app/: BUILD  CHANGELOG.md  Dockerfile  README.md
containers/common/: BUILD  Dockerfile.python
containers/sample/: BUILD  Dockerfile  Dockerfile.non-arg-arg
lib/my-simple-lib/: BUILD
lib/my-simple-lib/src/my_simple_lib/: fibonacci.py
lib/my-simple-lib2/: BUILD  README.md  pyproject.toml
lib/my-simple-lib2/src/: BUILD
tools/pants-plugins/pinchworms/: BUILD  pyproject.toml
tools/pants-plugins/pinchworms/src/pinchworms/general/: read_file.py  register.py
tools/pants-plugins/pinchworms/src/pinchworms/packaging/: register.py  setup_kwargs.py
