[tool.poetry]
name = "my-simple-lib"
version = "0.0.0" # Pants does the versioning
description = ""
authors = ["Ramon Buckland <ramon@thebuckland.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
